k8s/ingress/05-nginx-ingressclass.yaml
---
# NGINX IngressClass
# Defines the ingress class for NGINX controller
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
  annotations:
    description: "NGINX IngressClass for MS5.0 Floor Dashboard"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
